# logfanoutd

./: .gitattributes  CMakeLists.txt  README.md  logfanoutd.service  logfanoutd.socket
.github/workflows/: cmake.yml  codeql.yml
include/: list.h  logfanoutd.h  range.h  vpath.h
src/: list.c  logfanoutd.c  main.c  range.c  vpath.c
test/: list.c  logfanoutd.c  range.c  vpath.c
